--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# RCC - UChicago, 2025\n",
     "\n",
-    "## Introduction to Satellite and Climate data with Python\n",
+    "## `Introduction to Satellite and Climate data with Python`\n",
     "\n",
     "### Instructors:\n",
     "\n",
